updated default color and added styling classes to Work section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <section class="w-container">
       <h2>Work</h2>
-      <h3>UI/UX Designer <span style="font-weight: 100">SIM Partners <span style="color: #717171">/ 2016 - Present / Chicago, IL<span></span></h3>
+      <h3>UI/UX Designer <span class="company">SIM Partners</span><span class="dates"> / 2016 - Present / Chicago, IL</span></h3>
     </section>
   </div>
 </body>
