--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html >
+<html lang="en-us">
 <head>
-  <meta charset="UTF-8">
   <title>Valerie Seer</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="title" content="Valerie Seer / UI/UX Designer & Developer">
+  <meta name="description" content="Chicago-based designer and developer">
+  <link rel="icon" href="favicon.ico" type="image" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script src="js/index.js"></script>
   <div class="container">
     <header class="h-container">
       <h1>Valerie Seer</h1>
@@ -43,5 +46,9 @@
       <h3>UI/UX Designer <span class="company">SIM Partners</span><span class="dates"> / 2016 - Present / Chicago, IL</span></h3>
     </section>
   </div>
+
+  <!-- scripts -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
