media query to block display Work dates in mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <section class="w-container">
       <h2>Work</h2>
-      <h3>UI/UX Designer <span class="company">SIM Partners</span><span class="dates"> / 2016 - Present / Chicago, IL</span></h3>
+      <h3>UI/UX Designer <span class="company">SIM Partners / </span><span class="dates">2016 - Present / Chicago, IL</span></h3>
     </section>
   </div>
 
