--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 
 <body>
-  <nav class="container__nav">
-    <ul class="container-width">
-      <li><a href="index.html">HELLO</a></li>
-      <li><a href="resume.html">RESUME</a></li>
-    </ul>
-  </nav>
+    <nav class="container__nav">
+      <ul class="container-width">
+        <li class="home-link"><a href="index.html">HELLO</a></li>
+        <li class="resume-link"><a href="resume.html">RESUME</a></li>
+      </ul>
+    </nav>
 
   <section class="container__landing container-width">
     <div class="container__landing-content">
       <h1>Valerie Seer</h1>
       <h2>Web Developer based in <br> Chicago, Illinois.</h2>
-      <p>I build websites and provide solutions to business problems.</p>
-      <p>Some helpful starter links:</p>
+      <p>I build websites and provide design solutions.</p>
+      <p>Some starter links:</p>
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
