--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
               <ul>
                 <li><i class="fa fa-map-marker"></i>Chicago, IL</li>
                 <li><i class="fa fa-envelope"></i><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
-                <li><i class="fa fa-phone"></i><a href="tel:9547564701">(954) 756-4701</a></li>
+                <li><i class="fa fa-github"></i><a href="https://github.com/valerieseer" target="_blank">github.com/valerieseer</a></li>
               </ul>
             </div>
         </div>
@@ -40,7 +40,7 @@
     <section class="container__work container-width">
       <h2>Work</h2>
       <div class="container__work-item">
-        <h3>UI/UX Designer <span class="company">SIM Partners </span><span class="dates">/ Chicago, IL / 2016 - Present</span></h3>
+        <h3>UI/UX Designer &amp; Developer <span class="company">SIM Partners </span><span class="dates">/ Chicago, IL / 2016 - Present</span></h3>
         <ul>
           <li><i class="fa fa-chevron-right"></i>Wireframe and mockup data-driven pages, considering UX best practices and client KPI’s.</li>
           <li><i class="fa fa-chevron-right"></i>Develop and maintain pages using Mustache, XSL, Bootstrap, Less, JavaScript/jQuery, Gulp, Git, and Jenkins.</li>
