--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <section class="container__landing container-width">
     <div class="container__landing-content">
       <h1>Valerie Seer</h1>
-      <h2>Web Developer based in <br> Chicago, Illinois.</h2>
+      <h2>Web Developer based in sunny Chicago, Illinois.</h2>
       <p>I build websites and provide design solutions.</p>
-      <p>Some starter links:</p>
+      <p>Some helpful starter links:</p>
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
@@ -56,7 +56,7 @@
   </section>
 
   <!-- scripts -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
