Margin and padding fixes

--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
           <div class="container__resume-skills-list">
             <ul>
               <h3>Technical</h3>
-              <li>JavaScript/jQuery, HTML5, CSS3, Bootstrap/LESS, Git, Node.js/npm, Mustache, XSLT/XML, JSON, Jenkins, JIRA, WCAG</li>
+              <li>JavaScript/jQuery, HTML5, CSS3, Bootstrap/LESS, Git, Node.js/npm, Mustache, XSLT, Jenkins, JIRA, WCAG</li>
             </ul>
             <ul>
               <h3>Software</h3>
@@ -52,7 +52,7 @@
               <li>Illustrator</li>
             </ul>
             <ul>
-              <h3>Languages</h3>
+              <h3>Other Languages</h3>
               <li>Spanish (written &amp; spoken)</li>
             </ul>
           </div>
@@ -61,11 +61,11 @@
         <section class="container__work">
           <h2>Work</h2>
           <div class="container__work-item">
-            <h3>UI/UX Designer &amp; Developer <span class="company">SIM Partners </span><span class="dates">/ Chicago, IL / 2016 - Present</span></h3>
+            <h3>UI/UX Designer &amp; Developer <span class="company">SIM Partners / Chicago, IL </span><span class="dates">/ 2016 - Present</span></h3>
             <p>Wireframe and mockup data-driven pages, considering UX best practices and client KPI’s. Develop, deploy, and maintain pages using Mustache, XSLT, Bootstrap, Less, JavaScript/jQuery, Gulp, Git, and Jenkins. Implement cross-browser tests on pages during development. Ensure pages meet web accessibility standards. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
           </div>
           <div class="container__work-item">
-              <h3>Graphic Designer <span class="company">Freelance </span><span class="dates">/ Chicago, IL / 2015 - 2017</span></h3>
+              <h3>Graphic Designer <span class="company">Freelance / Chicago, IL </span><span class="dates">/ 2015 - 2017</span></h3>
               <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Provide WordPress template support, using HTML/CSS to update template designs.</p>
             </div>
         </section>
@@ -81,8 +81,8 @@
         <section class="container__education">
           <h2>Education</h2>
           <ul>
-            <li><p><strong>BA,</strong> Communication Studies &amp; English Literature / Northwestern University / 2012</p></li>
-            <li><p><strong>Certification,</strong> Digital Multimedia Design / Harold Washington College / 2016</p></li>
+            <li><p><strong>BA,</strong> Communication Studies &amp; English Literature, Northwestern University <span class="dates">/ 2012</span></p></li>
+            <li><p><strong>Certification,</strong> Digital Multimedia Design, Harold Washington College <span class="dates">/ 2016</span></p></li>
           </ul>
         </section>
 
