Added media queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="title" content="Valerie Seer / Web Developer">
-  <meta name="description" content="Chicago-based designer and developer">
+  <meta name="description" content="Chicago-based developer and UX designer">
   <link rel="icon" href="favicon.ico" type="image" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -24,7 +24,7 @@
     <div class="container__landing-content">
       <h1>Valerie Seer</h1>
       <h2>Web Developer based in sunny Chicago, Illinois.</h2>
-      <p>I build websites and provide design solutions.</p>
+      <p>I build websites and provide UX solutions.</p>
       <p>Some helpful starter links:</p>
       <ul>
         <li>
