--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="title" content="Valerie Seer / Web Developer">
-  <meta name="description" content="Chicago-based designer and developer">
+  <meta name="description" content="Chicago-based developer and UX designer">
   <link rel="icon" href="favicon.ico" type="image" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -31,7 +31,7 @@
               <ul>
                 <li><i class="fa fa-map-marker"></i>Chicago, IL</li>
                 <li><i class="fa fa-envelope"></i><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
-                <li><i class="fa fa-github"></i><a href="https://github.com/valerieseer" target="_blank">github.com/valerieseer</a></li>
+                <!-- <li><i class="fa fa-github"></i><a href="https://github.com/valerieseer" target="_blank">github.com/valerieseer</a></li> -->
               </ul>
             </div>
         </div>
@@ -44,7 +44,7 @@
           <div class="container__resume-skills-list">
             <ul>
               <h3>Technical</h3>
-              <li>JavaScript/jQuery, HTML5, CSS3, Bootstrap/LESS, Git, Node.js/npm, Mustache, XSLT, Jenkins, JIRA, WCAG</li>
+              <li>JavaScript, jQuery, HTML5, CSS3, Bootstrap, LESS, Git, Node.js/npm, Express, Mustache, XSLT, Jenkins, JIRA, WCAG 2.0</li>
             </ul>
             <ul>
               <h3>Software</h3>
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <section class="container__personal-projects">
+        <section class="container__personal-projects fade-in">
           <h2>Personal Projects</h2>
           <div class="container__personal-projects-item">
             <h3><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h3>
@@ -78,20 +78,50 @@
           </div>
         </section>
   
-        <section class="container__education">
+        <section class="container__education fade-in">
           <h2>Education</h2>
           <ul>
             <li><p><strong>BA,</strong> Communication Studies &amp; English Literature, Northwestern University <span class="dates">/ 2012</span></p></li>
-            <li><p><strong>Certification,</strong> Digital Multimedia Design, Harold Washington College <span class="dates">/ 2016</span></p></li>
+            <li><p><strong>Certificate,</strong> Interactive Design &amp; Development, Harold Washington College <span class="dates">/ 2016</span></p></li>
           </ul>
         </section>
 
-        <section>
+        <section class="fade-in">
           <h2><strong>Latest hobbies</strong></h2>
           <p>Calisthenics, reading Greek mythology, playing rec sports, <a href="https://www.youtube.com/watch?v=1Cs0qyG78qY&list=RD1Cs0qyG78qY&t=7194" target="_blank">listening to those chill-hop streams on YouTube with the anime in the background</a>.</p>
         </section>
       </section>    
     </main>
+
+    <footer>
+      <section class="container-width">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
+              <i class="fa fa-linkedin ld-icon hover" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/valerieseer" target="_blank">
+              <i class="fa fa-github gh-icon hover" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/valerieseer" target="_blank">
+              <i class="fa fa-twitter tw-icon hover" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/valerieseer" target="_blank">
+              <i class="fa fa-behance be-icon hover" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="copyright-section">
+        <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+      </section>
+    </footer>
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
