Added animations for page transitions

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 </head>
 
 <body>
-    <nav class="container__nav">
-      <ul class="container-width">
-        <li class="home-link"><a href="index.html">HELLO</a></li>
-        <li class="resume-link"><a href="resume.html">RESUME</a></li>
-      </ul>
-    </nav>
+  <nav class="container__nav">
+    <ul class="container-width">
+      <li class="home-link"><a href="index.html">HELLO</a></li>
+      <li class="resume-link"><a href="resume.html">RESUME</a></li>
+      <!-- <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
+    </ul>
+  </nav>
 
-  <section class="container__landing container-width">
+  <section class="container__landing container-width slide_element slide_element--fadeinright">
     <div class="container__landing-content">
       <h1>Valerie Seer</h1>
-      <h2>Web Developer based in sunny Chicago, Illinois.</h2>
-      <p>I build websites and provide UX solutions.</p>
+      <h2>Web Developer &amp; Designer based in Chicago, Illinois.</h2>
+      <p>I build websites and provide UI/UX design solutions.</p>
       <p>Some helpful starter links:</p>
       <ul>
         <li>
