--- a/resume.html
+++ b/resume.html
@@ -13,14 +13,15 @@
   </head>
 
   <body>  
-    <nav class="container__nav">
+    <nav class="container__nav slide_element slide_element--fadein">
       <ul class="container-width">
         <li class="home-link"><a href="index.html">HELLO</a></li>
         <li class="resume-link"><a href="resume.html">RESUME</a></li>
+        <!-- <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
       </ul>
     </nav>
 
-    <header class="container__resume-header">
+    <header class="container__resume-header slide_element slide_element--fadein">
       <div class="container__resume-header-bg"></div>
       <div class="container-width">
         <div class="container__resume-header-content">
@@ -28,23 +29,22 @@
             <div class="container__resume-header-title">
               <h1>Valerie Seer</h1>
               <h2>Web Developer</h2>
+              <p>I specialize in front-end web development and UX design.</p>
               <ul>
-                <li><i class="fa fa-map-marker"></i>Chicago, IL</li>
                 <li><i class="fa fa-envelope"></i><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
-                <!-- <li><i class="fa fa-github"></i><a href="https://github.com/valerieseer" target="_blank">github.com/valerieseer</a></li> -->
               </ul>
             </div>
         </div>
       </div>
     </header>
 
-    <main class="container__resume-main container-width">
+    <main class="container__resume-main container-width slide_element slide_element--fadeinup">
       <section class="container__resume-main-skills">
           <h2>Skills</h2>
           <div class="container__resume-skills-list">
             <ul>
               <h3>Technical</h3>
-              <li>JavaScript, jQuery, HTML5, CSS3, Bootstrap, LESS, Git, Node.js/npm, Express, Mustache, XSLT, Jenkins, JIRA, WCAG 2.0</li>
+              <li>JavaScript, jQuery, HTML5, CSS3, Bootstrap, LESS, Git, Node.js/npm, Express, Mustache.js, XSLT, WCAG 2.0</li>
             </ul>
             <ul>
               <h3>Software</h3>
@@ -59,36 +59,36 @@
         </section>
       <section class="container__resume-main-work">
         <section class="container__work">
-          <h2>Work</h2>
           <div class="container__work-item">
-            <h3>UI/UX Designer &amp; Developer <span class="company">SIM Partners / Chicago, IL </span><span class="dates">/ 2016 - Present</span></h3>
-            <p>Wireframe and mockup data-driven pages, considering UX best practices and client KPI’s. Develop, deploy, and maintain pages using Mustache, XSLT, Bootstrap, Less, JavaScript/jQuery, Gulp, Git, and Jenkins. Implement cross-browser tests on pages during development. Ensure pages meet web accessibility standards. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
+            <h2>UI/UX Designer &amp; Developer</h2>
+            <h3><span class="company">SIM Partners, </span> <span class="dates">2016 - Present</span></h3>
+            <p>Design and develop data-driven pages and front-end UX features. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
           </div>
           <div class="container__work-item">
-              <h3>Graphic Designer <span class="company">Freelance / Chicago, IL </span><span class="dates">/ 2015 - 2017</span></h3>
-              <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Provide WordPress template support, using HTML/CSS to update template designs.</p>
-            </div>
+            <h2>Graphic Designer</h2>
+            <h3><span class="company">Freelance, </span> <span class="dates">2015 - 2017</span></h3>
+            <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Customize WordPress themes as needed.</p>
+          </div>
         </section>
 
-        <section class="container__personal-projects fade-in">
-          <h2>Personal Projects</h2>
+        <section class="container__personal-projects">
           <div class="container__personal-projects-item">
-            <h3><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h3>
+            <h2><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h2>
             <p>A Slack command bot that returns directions and traffic information using the Google Maps API. Technologies used: Node.js, Mongo, Express, JavaScript.</p>
           </div>
         </section>
   
-        <section class="container__education fade-in">
-          <h2>Education</h2>
+        <section class="container__education">
           <ul>
-            <li><p><strong>BA,</strong> Communication Studies &amp; English Literature, Northwestern University <span class="dates">/ 2012</span></p></li>
-            <li><p><strong>Certificate,</strong> Interactive Design &amp; Development, Harold Washington College <span class="dates">/ 2016</span></p></li>
+            <li>
+              <h2>Certificate in Interactive Design &amp; Development</h2> 
+              <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
+            </li>
+            <li>
+              <h2>B.A. in Communication Studies &amp; English Literature</h2>
+              <p>Northwestern University,<span class="dates"> 2008 - 2012</span></p>
+            </li>
           </ul>
-        </section>
-
-        <section class="fade-in">
-          <h2><strong>Latest hobbies</strong></h2>
-          <p>Calisthenics, reading Greek mythology, playing rec sports, <a href="https://www.youtube.com/watch?v=1Cs0qyG78qY&list=RD1Cs0qyG78qY&t=7194" target="_blank">listening to those chill-hop streams on YouTube with the anime in the background</a>.</p>
         </section>
       </section>    
     </main>
@@ -119,7 +119,7 @@
         </ul>
       </section>
       <section class="copyright-section">
-        <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+        <p>&copy; Valerie Seer <span class="copyright-date"></span></p>
       </section>
     </footer>
 
