Copy and styles updates

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
     </ul>
   </nav>
 
-  <section class="container__landing container-width slide_element slide_element--fadeinright">
+  <main class="container__landing container-width slide_element slide_element--fadein">
     <div class="container__landing-content">
       <h1>Valerie Seer</h1>
       <h2>Web Developer &amp; Designer based in Chicago, Illinois.</h2>
-      <p>I build websites and provide UI/UX design solutions.</p>
-      <p>Some helpful starter links:</p>
+      <p>I build websites and design UI/UX solutions.</p>
+      <p>Catch me on:</p>
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
-            <i class="fa fa-linkedin ld-icon hover" aria-hidden="true"></i>
+            LinkedIn
           </a>
         </li>
         <li>
           <a href="https://github.com/valerieseer" target="_blank">
-            <i class="fa fa-github gh-icon hover" aria-hidden="true"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/valerieseer" target="_blank">
-            <i class="fa fa-twitter tw-icon hover" aria-hidden="true"></i>
+            Github
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/valerieseer" target="_blank">
-            <i class="fa fa-behance be-icon hover" aria-hidden="true"></i>
+            Behance
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/valerieseer" target="_blank">
+            Twitter
           </a>
         </li>
       </ul>
@@ -54,7 +54,11 @@
       <img src="images/giphy.gif"/>
       <p>Probably me right now.</p>
     </div>
-  </section>
+  </main>
+
+  <footer>
+    <section>&copy; <span class="copyright-date"></span> Valerie Seer</section>
+  </footer>
 
   <!-- scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
