--- a/resume.html
+++ b/resume.html
@@ -29,16 +29,15 @@
             <div class="container__resume-header-title">
               <h1>Valerie Seer</h1>
               <h2>Web Developer</h2>
-              <p>I specialize in front-end web development and UX design.</p>
               <ul>
-                <li><i class="fa fa-envelope"></i><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
+                <li><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
               </ul>
             </div>
         </div>
       </div>
     </header>
 
-    <main class="container__resume-main container-width slide_element slide_element--fadeinup">
+    <main class="container__resume-main container-width slide_element slide_element--fadein">
       <section class="container__resume-main-skills">
           <h2>Skills</h2>
           <div class="container__resume-skills-list">
@@ -59,33 +58,40 @@
         </section>
       <section class="container__resume-main-work">
         <section class="container__work">
+          <h2>Experience</h2>
           <div class="container__work-item">
-            <h2>UI/UX Designer &amp; Developer</h2>
-            <h3><span class="company">SIM Partners, </span> <span class="dates">2016 - Present</span></h3>
+            <div class="container__work-item-title">
+                <h3>UI/UX Designer &amp; Developer</h3>
+                <p><span class="company">SIM Partners, </span> <span class="dates">2016 - Present</span></p>
+            </div>
             <p>Design and develop data-driven pages and front-end UX features. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
           </div>
           <div class="container__work-item">
-            <h2>Graphic Designer</h2>
-            <h3><span class="company">Freelance, </span> <span class="dates">2015 - 2017</span></h3>
+            <div class="container__work-item-title">
+              <h3>Graphic Designer</h3>
+              <p><span class="company">Freelance, </span> <span class="dates">2015 - 2017</span></p>
+            </div>
             <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Customize WordPress themes as needed.</p>
           </div>
         </section>
 
         <section class="container__personal-projects">
+          <h2>Personal Projects</h2>
           <div class="container__personal-projects-item">
-            <h2><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h2>
-            <p>A Slack command bot that returns directions and traffic information using the Google Maps API. Technologies used: Node.js, Mongo, Express, JavaScript.</p>
+            <h3><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h3>
+            <p>A Slack command bot that returns directions and traffic information using the Google Maps API. Technologies: Node.js, Mongo, Express, JavaScript.</p>
           </div>
         </section>
   
         <section class="container__education">
+          <h2>Education</h2>
           <ul>
             <li>
-              <h2>Certificate in Interactive Design &amp; Development</h2> 
+              <h3>Certificate in Interactive Design &amp; Development</h3> 
               <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
             </li>
             <li>
-              <h2>B.A. in Communication Studies &amp; English Literature</h2>
+              <h3>B.A. in Communication Studies &amp; English Literature</h3>
               <p>Northwestern University,<span class="dates"> 2008 - 2012</span></p>
             </li>
           </ul>
@@ -93,34 +99,35 @@
       </section>    
     </main>
 
-    <footer>
+    <section class="footer-links">
       <section class="container-width">
         <ul>
           <li>
             <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
-              <i class="fa fa-linkedin ld-icon hover" aria-hidden="true"></i>
+              LinkedIn
             </a>
           </li>
           <li>
             <a href="https://github.com/valerieseer" target="_blank">
-              <i class="fa fa-github gh-icon hover" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/valerieseer" target="_blank">
-              <i class="fa fa-twitter tw-icon hover" aria-hidden="true"></i>
+              Github
             </a>
           </li>
           <li>
             <a href="https://www.behance.net/valerieseer" target="_blank">
-              <i class="fa fa-behance be-icon hover" aria-hidden="true"></i>
+              Behance
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/valerieseer" target="_blank">
+              Twitter
             </a>
           </li>
         </ul>
       </section>
-      <section class="copyright-section">
-        <p>&copy; Valerie Seer <span class="copyright-date"></span></p>
-      </section>
+    </section>
+
+    <footer>
+      <section>&copy; <span class="copyright-date"></span> Valerie Seer</section>
     </footer>
 
     <!-- scripts -->
