--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul class="container-width">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
-      <!-- <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
+      <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
     </ul>
   </nav>
 
