--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
       <ul class="container-width">
         <li class="home-link"><a href="index.html">HELLO</a></li>
         <li class="resume-link"><a href="resume.html">RESUME</a></li>
-        <!-- <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
+        <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
       </ul>
     </nav>
 
@@ -43,7 +43,7 @@
           <div class="container__resume-skills-list">
             <ul>
               <h3>Technical</h3>
-              <li>JavaScript, jQuery, HTML5, CSS3, Bootstrap, LESS, Git, Node.js/npm, Express, Mustache.js, XSLT, WCAG 2.0</li>
+              <li>HTML5, CSS3, JavaScript, jQuery, React, Bootstrap, LESS, Git, Gulp, Node.js/npm, Express, Mustache.js, XSLT, WCAG 2.0</li>
             </ul>
             <ul>
               <h3>Software</h3>
