Added resume PDF

--- a/resume.html
+++ b/resume.html
@@ -30,8 +30,9 @@
               <h1>Valerie Seer</h1>
               <h2>Web Developer</h2>
               <ul>
-                <li><a href="mailto:seervalerie@gmail.com">seervalerie@gmail.com</a></li>
+                <li><a href="mailto:seervalerie@gmail.com"><i class="fa fa-envelope"></i>seervalerie@gmail.com</a></li>
               </ul>
+              <a href="seer_resume.pdf" class="pdf-link"><i class="fa fa-file-pdf"></i>Download PDF version</a>
             </div>
         </div>
       </div>
@@ -43,7 +44,7 @@
           <div class="container__resume-skills-list">
             <ul>
               <h3>Technical</h3>
-              <li>HTML5, CSS3, JavaScript, jQuery, React, Bootstrap, LESS, Git, Gulp, Node.js/npm, Express, Mustache.js, XSLT, WCAG 2.0</li>
+              <li>JavaScript, jQuery, React, HTML5, CSS3, Bootstrap, LESS, Git, Gulp, Node.js/npm, Express, Mustache.js, XSLT, WordPress, SquareSpace, WCAG 2.0</li>
             </ul>
             <ul>
               <h3>Software</h3>
@@ -64,7 +65,7 @@
                 <h3>UI/UX Designer &amp; Developer</h3>
                 <p><span class="company">SIM Partners, </span> <span class="dates">2016 - Present</span></p>
             </div>
-            <p>Design and develop data-driven pages and front-end UX features. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
+            <p>Wireframe and mockup data-driven pages, considering UX best practices and client KPI’s. Develop and maintain pages. Work within an Agile Kanban environment to continuously meet client requests through JIRA.</p>
           </div>
           <div class="container__work-item">
             <div class="container__work-item-title">
