--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="title" content="Valerie Seer / Web Developer">
   <meta name="description" content="Chicago-based developer and UX designer">
   <link rel="icon" href="favicon.ico" type="image" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -57,6 +56,7 @@
   </main>
 
   <footer>
+    <a href="mailto:seervalerie@gmail.com" class="footer-email">Email Me</a>
     <section>&copy; <span class="copyright-date"></span> Valerie Seer</section>
   </footer>
 
