Resume PDF now opens in new tab

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
               <ul>
                 <li><a href="mailto:seervalerie@gmail.com"><i class="fa fa-envelope"></i>seervalerie@gmail.com</a></li>
               </ul>
-              <a href="seer_resume.pdf" class="pdf-link"><i class="fa fa-file-pdf"></i>Download PDF version</a>
+              <a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>Download PDF version</a>
             </div>
         </div>
       </div>
