Added color overlay and text on portfolio tiles in mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
   <meta name="title" content="Valerie Seer / Web Developer">
   <meta name="description" content="Chicago-based developer and UX designer">
   <link rel="icon" href="favicon.ico" type="image" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -28,7 +27,7 @@
         <div class="tile tile-1">
           <a href="http://health.localsearchprofiles.com/simon-chau-chicago-cardiology" target="_blank">
             <div class="tile-content">
-              <h2>SIM Health Provider Page</h2>
+              <h2>Provider Page template</h2>
               <p>UI/UX Design and Development</p>
               <p>Bootstrap, LESS, Mustache, jQuery</p>
             </div>
