--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <div class="tile tile-1">
           <a href="http://health.localsearchprofiles.com/simon-chau-chicago-cardiology" target="_blank">
             <div class="tile-content">
-              <h2>Provider Page template</h2>
+              <h2>Profile Page template for providers</h2>
               <p>UI/UX Design and Development</p>
               <p>Bootstrap, LESS, Mustache, jQuery</p>
             </div>
